using System.Collections;
using System.Collections.Generic;
using UnityEngine;


namespace  Character.Control{
    ///<summary>
    /// 记录所有可能动画的参数名
    ///</summary>
    public class CharacterAnimationParam 
    {
        public static string attack = "Attack";
        public static string fly = "Fly";
        public static string victory = "Victory";
        public static string defend = "Defend";
        public static string die = "Die";
        public static string run = "Run";


    }
    
} 
